Fix OP_RETURN truncated text. (#502)
* Fix OP_RETURN truncated text.

* Fix scriptmessage width on desktop media queries

--- a/frontend/src/app/components/transaction/transaction.component.scss
+++ b/frontend/src/app/components/transaction/transaction.component.scss
@@ -47,12 +47,6 @@ h1{
 	  text-align: left;
 	  width: 100%;
 	}
-  }
-
-@media (max-width: 767.98px) {
-	.mobile-bottomcol {
-		margin-top: 15px;
-	}
 }
 
 .td-width {
@@ -81,8 +75,6 @@ h1{
 }
 
 .btn {
-	// float: right;
-	// margin-bottom: 0px;
 	margin-top: 5px;
 }
 
@@ -97,26 +89,9 @@ h1{
 	}
 }
 
-.scriptmessage {
-	overflow: hidden;
-	text-overflow: ellipsis;
-	vertical-align: middle;
-	max-width: 50px;
-	@media (min-width: 576px) {
-		max-width: 200px;
-	}
-}
-
-.scriptmessage.longer {
-	max-width: 500px;
-}
-
 @media (max-width: 767.98px) {
 	.mobile-bottomcol {
 		margin-top: 15px;
-	}
-	.scriptmessage.longer {
-		max-width: 200px !important;
 	}
 
 	.details-table td:first-child {
@@ -146,7 +121,3 @@ h1{
 		}
 	}
 }
-// .container-buttons{
-// 	width: 100%;
-// 	display: inline-block;
-// }
